fixed bugs lab3

--- a/programming-paradigms/src/app/lab3/lab3.component.css
+++ b/programming-paradigms/src/app/lab3/lab3.component.css
@@ -7,6 +7,13 @@
     margin: 3px;
 }
 
+.transitionDeleteButton{
+    background-color: red !important;
+}
+
+input{
+    width: 48%;
+}
 .transitionButtons{
     margin:5px;
     margin-left: 0;
